[package]
name = "markdown-edit"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/markdown-edit"
documentation = "https://docs.rs/markdown-edit"
description = "Edit markdown files in-place."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
pulldown-cmark = "0.1.2"
failure = "0.1.1"
pulldown-cmark-to-cmark = "1.1.0"

[dev-dependencies]
